policy/policies/security-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-securitycontext
  annotations:
    policies.kyverno.io/title: Add Default securityContext
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/description: >-
      A Pod securityContext entry defines fields such as the user and group 
      which should be used to run the Pod.
      This policy will mutate Pods and any Containers/initContainers it deploys
      to apply sensible defaults if those fields are not set.
spec:
  rules:
    - name: add-default-securitycontext
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            securityContext:
              +(runAsNonRoot): true
              +(runAsUser): 1000
              +(runAsGroup): 3000
              +(fsGroup): 2000
            containers:
              - (name): "*"
                securityContext:
                  +(runAsNonRoot): true
                  +(allowPrivilegeEscalation): false
                  +(capabilities):
                    drop:
                      - ALL
            initContainers:
              - (name): "*"
                securityContext:
                  +(runAsNonRoot): true
                  +(allowPrivilegeEscalation): false
                  +(capabilities):
                    drop:
                      - ALL
      exclude:
        resources:
          namespaces:
            - kube-system
            - kube-public
            - kube-node-lease
            - kyverno
